pkg/safeguards/lib/manifests/v2.0.0/container-restricted-image-pulls/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV1ContainerRestrictedImagePulls
metadata:
  name: v1-container-restricted-image-pulls
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    excludedImages: []
